[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiogardenasmart"
version = "0.1.0"
description = "Async Python client for the Gardena Smart System API v2"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiogardenasmart"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
